ing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: hello
spec:
  stripPrefix:
    prefixes:
      - "/edina"
      - "/hello"
    forceSlash: true

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: hello-strip-prefix@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - fuszenecker.eu
    secretName: letsencrypt-prod-cert
  rules:
  - http:
      paths:
      - path: /edina
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-hello
            port:
              number: 8000
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-hello
            port:
              number: 8000
